--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
+    "lodash.debounce": "^4.0.8",
     "nanoid": "^4.0.0",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
